updated response interface
